--- a/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
+++ b/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
@@ -7,13 +7,13 @@
         xmlns:mvvm="http://prismlibrary.com/"
         mvvm:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1000">
+        Title="MainWindow" Height="800" Width="1000">
     <Grid>
         <TabControl>
             <TabItem Header="Rechnung hinzufügen">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="2*"></RowDefinition>
                         <RowDefinition Height="4*"></RowDefinition>
                         <RowDefinition Height="3*"></RowDefinition>
                     </Grid.RowDefinitions>
