--- a/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
@@ -3,10 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SturmProjekt.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Button Command="{Binding PreviousCommand}" Grid.Row="2" Grid.Column="0" Content="Previous Page"></Button>
+        <Button Command="{Binding NextCommand}" Grid.Row="2" Grid.Column="1" Content="Next Page"></Button>
+        <ComboBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"></ComboBox>
     </Grid>
 </UserControl>
