--- a/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
@@ -18,6 +18,22 @@
         </Grid.ColumnDefinitions>
         <Button Command="{Binding PreviousCommand}" Grid.Row="0" Grid.Column="0" Content="Previous Page"></Button>
         <Button Command="{Binding NextCommand}" Grid.Row="0" Grid.Column="1" Content="Next Page"></Button>
-        <ComboBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"></ComboBox>
+
+        <ComboBox ItemsSource="{Binding ProfileList}" DisplayMemberPath="Name"
+                  SelectedItem="{Binding SelectedProfile, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+            <ComboBox.Style>
+                <Style>
+                    <Setter Property="ComboBox.IsEnabled" Value="True"/>
+
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Rechnung}" Value="{x:Null}">
+                            <Setter Property="ComboBox.IsEnabled" Value="False"/>
+
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ComboBox.Style>
+        </ComboBox>
+
     </Grid>
 </UserControl>
