fixed delete, fixed layout, added profile support

--- a/SturmProjekt/SturmProjekt/Views/PageListView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/PageListView.xaml
@@ -25,7 +25,7 @@
                     <StackPanel>
                         <Image Source="{Binding PageImage, IsAsync=True}"
                              
-                               MaxWidth="200"></Image>
+                               MaxHeight="230"></Image>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
