--- a/SturmProjekt/SturmProjekt/Views/AddRechnungView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/AddRechnungView.xaml
@@ -9,11 +9,12 @@
              d:DesignHeight="20" d:DesignWidth="300">
     <Grid>
             <StackPanel>
-            <Button Command="{Binding OpenFileCommand}" Content="Choose File"></Button>
-            <Button Command="{Binding DeletePageCommand}" Content="Delete File"></Button>
-            <Button Command="{Binding ConfirmCommand}" Content="Rechnung bestätigen"></Button>
-            <Label Content="Rechnungsname" Target="{Binding ElementName=Rechnungsname}"></Label>
-            <TextBox Name="Rechnungsname"  Text="{Binding RechnungsName, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <Label FontSize="20" Padding="3, 10, 30, 10" Content="Rechnungsname" Target="{Binding ElementName=Rechnungsname}"></Label>
+            <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="Rechnungsname"  Text="{Binding RechnungsName, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding OpenFileCommand}" Content="Datei hinzufügen"></Button>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding DeletePageCommand}" Content="Datei entfernen"></Button>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding ConfirmCommand}" Content="Rechnung bestätigen"></Button>
+            
         </StackPanel>
     </Grid>
 </UserControl>
