--- a/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
@@ -8,33 +8,25 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Button Command="{Binding PreviousCommand}" Grid.Row="0" Grid.Column="0" Content="Previous Page"></Button>
-        <Button Command="{Binding NextCommand}" Grid.Row="0" Grid.Column="1" Content="Next Page"></Button>
+        <StackPanel>
+            <ComboBox Margin="0,10,0,10" Padding="3, 10, 30, 10" ItemsSource="{Binding ProfileList}" DisplayMemberPath="Name"
+                      SelectedItem="{Binding SelectedProfile, Mode=TwoWay}">
+                <ComboBox.Style>
+                    <Style>
+                        <Setter Property="ComboBox.IsEnabled" Value="True"/>
 
-        <ComboBox ItemsSource="{Binding ProfileList}" DisplayMemberPath="Name"
-                  SelectedItem="{Binding SelectedProfile, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
-            <ComboBox.Style>
-                <Style>
-                    <Setter Property="ComboBox.IsEnabled" Value="True"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Rechnung}" Value="{x:Null}">
+                                <Setter Property="ComboBox.IsEnabled" Value="False"/>
 
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Rechnung}" Value="{x:Null}">
-                            <Setter Property="ComboBox.IsEnabled" Value="False"/>
-
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ComboBox.Style>
-        </ComboBox>
-        <Button Command="{Binding DrawCommand}" Grid.Row="2" Grid.Column="0"></Button>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </ComboBox.Style>
+            </ComboBox>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding DrawCommand}" Content="{Binding ButtonText}"></Button>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding SortRechnungCommnad}" Content="Rechnung sortieren"></Button>
+        </StackPanel>
+       
     </Grid>
 </UserControl>
