bulk edit added; ocr, sammelpdf, save as pdf, bl refactor, bildvergleich missing

--- a/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
+++ b/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
@@ -41,8 +41,8 @@
                 </Grid>
                
             </TabItem>
-            <TabItem Header="Fertigstellen">
-                <views:ConfirmView></views:ConfirmView>
+            <TabItem Header="Ordner einordnen">
+                <views:BulkEditView></views:BulkEditView>
             </TabItem>
         </TabControl>
 
