--- a/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
+++ b/SturmProjekt/SturmProjekt/Views/MainWindow.xaml
@@ -44,6 +44,9 @@
             <TabItem Header="Ordner einordnen">
                 <views:BulkEditView></views:BulkEditView>
             </TabItem>
+            <TabItem Header="SammelPDFs">
+                <views:SammelPDFView></views:SammelPDFView>
+            </TabItem>
         </TabControl>
 
     </Grid>
