added offset + minor changes

--- a/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfileView.xaml
@@ -27,6 +27,8 @@
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding DrawCommand}" Content="{Binding ButtonText}"></Button>
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding CancelCommand}" Content="Abbrechen"></Button>
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding SortRechnungCommnad}" Content="Rechnung sortieren"></Button>
+
+            <TextBlock Margin="0,10,0,10" Padding="3,10,30,10" Name="Sortiert" Text="{Binding Sorted, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
         </StackPanel>
        
     </Grid>
