--- a/SturmProjekt/SturmProjekt/Views/BulkEditView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/BulkEditView.xaml
@@ -9,8 +9,8 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <StackPanel>
-            <Button Command="{Binding ChooseFolderCommand }" Content="Ordner auswählen"></Button>
-            <TextBlock Text="{Binding FileCountText, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+            <Button Command="{Binding ChooseFolderCommand }" Content="Ordner auswählen" Margin="0,10,0,10" Padding="3, 10, 30, 10"></Button>
+            <TextBlock Text="{Binding FileCountText, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,10" Padding="3, 10, 30, 10"></TextBlock>
             <ComboBox Margin="0,10,0,10" Padding="3, 10, 30, 10" ItemsSource="{Binding ProfileList}" DisplayMemberPath="Name"
                       SelectedItem="{Binding SelectedProfile, Mode=TwoWay}">
                 <ComboBox.Style>
@@ -26,7 +26,9 @@
                     </Style>
                 </ComboBox.Style>
             </ComboBox>
-            <Button Command="{Binding SortFolderCommand}" Content="Ordner sortieren"></Button>
+            <Button Command="{Binding SortFolderCommand}" Content="Ordner sortieren" Margin="0,10,0,10" Padding="3, 10, 30, 10"></Button>
+
+            <TextBlock Margin="0,10,0,10" Padding="3,10,30,10" Name="Sortiert" Text="{Binding FilesSorted, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
         </StackPanel>
     </Grid>
 </UserControl>
