--- a/SturmProjekt/SturmProjekt/Views/AddRechnungView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/AddRechnungView.xaml
@@ -13,6 +13,7 @@
             <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="Rechnungsname"  Text="{Binding RechnungsName, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding OpenFileCommand}" Content="Datei hinzufügen"></Button>
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding DeletePageCommand}" Content="Datei entfernen"></Button>
+            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding DeleteAllCommand}" Content="Alle Datein entfernen"></Button>
             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding ConfirmCommand}" Content="Rechnung bestätigen"></Button>
             
         </StackPanel>
