--- a/SturmProjekt/SturmProjekt/Views/ProfileImageView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfileImageView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SturmProjekt.Views.ProfileControlView"
+﻿<UserControl x:Class="SturmProjekt.Views.ProfileImageView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"        
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,9 +10,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <StackPanel>
-            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding LeftCommand}" Content="Vorige Page"/>
-            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding RightCommand}" Content="Nächste Page"/>
-            <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding SaveCommand}" Content="Save Profile"/>
+            <Image Source="{Binding PageImage, UpdateSourceTrigger=PropertyChanged}" CacheMode="BitmapCache"></Image>
         </StackPanel>
     </Grid>
 </UserControl>
