--- a/SturmProjekt/SturmProjekt/Views/ProfilePageEditView.xaml
+++ b/SturmProjekt/SturmProjekt/Views/ProfilePageEditView.xaml
@@ -14,9 +14,13 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate DataType="{x:Type custom:ProfilePageEditViewModel}">
                         <StackPanel Orientation="Horizontal">
+                            <Label Content="X: "></Label>
                             <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="PageX"  Text="{Binding X, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                            <Label Content="Y: "></Label>
                             <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="PageY"  Text="{Binding Y, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                            <Label Content="Width: "></Label>
                             <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="PageWidth"  Text="{Binding Width, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                            <Label Content="Height: "></Label>
                             <TextBox Margin="0,10,0,10" Padding="3, 10, 30, 10" Name="PageHeight"  Text="{Binding Height, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             <Button Margin="0,10,0,10" Padding="3, 10, 30, 10" Command="{Binding ElementName=lines,Path=DataContext.RemoveItemCommand}" CommandParameter="{Binding}" Content="Remove"/>
                         </StackPanel>
